<resources>
    <string name="app_name">CryptoMessaging</string>
    <string name="available_devices">Available devices</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="settings">Settings</string>
    <string name="unpair_device">Unpair device</string>
    <string name="unpair_with">"Would you like to unpair with "</string>
    <string name="chat">Chat</string>
    <string name="chat_with">"Would you like to chat with "</string>
    <string name="no_bt_support">Your device does not support bluetooth</string>
    <string name="pair_in_progress">Pairing in progress</string>
    <string name="scanning_for_devices">Scanning for devices</string>
    <string name="paired">Paired</string>
    <string name="unpaired">Unpaired</string>
    <string name="toogle_visibility">Toggle Visibility</string>
    <string name="toogle_visibility_message">Would you like to make your device visible to other devices for another 300 seconds?</string>
    <string name="chatting_with">"Chatting with "</string>
    <string name="not_secure">Not man in the middle secure</string>
    <string name="secure">Secure</string>
    <string name="not_secure_connection">\? Be warned the connections is not protected against man in the middle attacks. Enter other user public key to secure the connection</string>
    <string name="enter_key">Enter key</string>
    <string name="not_paired">Not paired</string>
    <string name="enter_key_to_secure">" wants to chat with you. The connection thought is vulnerable to man in the middle attacks. Enter other user public key to secure it"</string>
    <string name="secured">" wants to chat with you."</string>
    <string name="cryptography_algorithms">Cryptographic algorithms</string>
    <string name="aes">AES</string>
    <string name="des">DES</string>
    <string name="hmac">HMAC</string>
    <string name="sha2">SHA2</string>
</resources>
